fix pixel shift on app preview

--- a/src/themes/default/css/style.css
+++ b/src/themes/default/css/style.css
@@ -458,7 +458,8 @@ input[type="file"] {
 
 .search ul .current-app {
   position: fixed;
-  top: -109px;
+  top: -114px;
+  height: 114px;
   display: none;
   text-align: center;
   left: 10px;
